WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257576
REGRESSION (
263724@main
): Jumpiness and jitteriness in scrolling on searchfox.org
https://bugs.webkit.org/show_bug.cgi?id=257576
Summary
REGRESSION (263724@main): Jumpiness and jitteriness in scrolling on searchfox...
Ahmad Saleem
Reported
2023-05-31 17:26:30 PDT
Created
attachment 466556
[details]
Video - Search & Scrolling flickers Hi Team, As discussed on Slack, when I open any link with reference to page, I get flickers: Test Link:
https://searchfox.org/wubkat/source/Source/WebCore/rendering/RenderTable.cpp#1435
Please refer to video for what is happening. Thanks!
Attachments
Video - Search & Scrolling flickers
(31.08 MB, video/quicktime)
2023-05-31 17:26 PDT
,
Ahmad Saleem
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-31 21:20:14 PDT
<
rdar://problem/110095194
>
Ryosuke Niwa
Comment 2
2023-06-06 17:59:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14718
EWS
Comment 3
2023-06-07 06:45:22 PDT
Committed
264940@main
(7c2201e62a9a): <
https://commits.webkit.org/264940@main
> Reviewed commits have been landed. Closing PR #14718 and removing active labels.
Karl Dubost
Comment 4
2023-06-13 00:55:37 PDT
***
Bug 258001
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug