REGRESSION (263724@main): Jumpiness and jitteriness in scrolling on searchfox.org https://bugs.webkit.org/show_bug.cgi?id=257576 <rdar://problem/110095194>

Reviewed by Simon Fraser.

The bug was caused by WebKit no longer clearing the scroll anchoring element upon page load completion.
This turned out to be not a Web compatible change.

Fix fast/dynamic/anchor-lock.html in another way by remembering to which node scrolling was scheduled
in LocalFrameView instead of relying on m_maintainScrollPositionAnchor to be not cleared upon page load
completion, which is not generally Web compatible.

* LayoutTests/fast/scrolling/scroll-anchoring-after-page-load-expected.html: Added.
* LayoutTests/fast/scrolling/scroll-anchoring-after-page-load.html: Added.
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::completed):
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::scheduleScrollToAnchorAndTextFragment):
* Source/WebCore/page/LocalFrameView.h:

Canonical link: https://commits.webkit.org/264940@main